--- a/media/css/form.css
+++ b/media/css/form.css
@@ -5,42 +5,69 @@ body{
     margin: 0;
     padding:0;
     border: 0;
+    background-color: #026873;
+    background-image: linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
+     linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
+     linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
+     linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
+    background-size: 13px, 29px, 37px, 53px;
 }
-.smpl-form {
-    margin: 10px;
+.form {
+    margin: 50px auto;
     width: 210px;
     background: #f9f9f9;
     padding: 20px;
     border: 1px solid #d4d4d4;
-}
-.smpl-form *:focus{
-    outline: 0;
+    border-radius: 15px;
 }
 
-.smpl-form label {
+
+.form label {
     display: block;
     font-weight: 100;
     font-size: 13px;
     margin-top: 10px;
-    color: #454545;
-    margin-bottom: 2px;
+    color: #5F615F;
+    margin-bottom: 3px;
 }
-.smpl-form input, .smpl-form textarea{
-    display: block;
-    padding: 9px;
-    border: 1px solid #d4d4d4;
-    width: 190px;
-    font-size: 14px;
-}
-.smpl-form textarea{
-    height: 70px;
+.form label:first-child{
+    margin-top:0;
 }
 
-.smpl-form input.button {
-    border: 0;
-    background-color: #21449b;
-    margin-top: 20px;
-    color: white;
-    border-radius: 4px;
-    width: 210px;
+.form input, .form textarea{
+    display: block;
+    border: 1px solid #d4d4d4;
+    padding: 9px 10px;
+    width: 190px;
+    font-size: 14px;
+    border-radius: 8px;
+    box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+.form input:focus,.form textarea:focus{
+ box-shadow:0px 0px 5px rgba(50, 200, 255, 10);
+    outline:none;
+}
+
+.form textarea{
+    max-width: 190px;
+    max-height: 100px;
+    height: 60px;
+    min-width: 190px;  
+    min-height: 30px;  
+   
+   
+}
+
+.form input.button {
+    display:block
+    border: none;
+    margin: 10px auto;
+    padding:10px 30px;
+    color:  #5F615F;
+    border-radius: 10px;
+    width: 180px;
+    background-image: linear-gradient(to bottom, #FFF, #DDD);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    text-shadow:0 0.3px 0.3px white;
+    
 }
